[metadata]
name = tacotron
version = 0.1.0
author = Benjamin van Niekerk
author_email = benjamin.l.van.niekerk@gmail.com
url = https://github.com/bshall/Tacotron
description = A PyTorch implementation of Location-Relative Attention Mechanisms For Robust Long-Form Speech Synthesis.
long_description = file:README.md
long_description_content_type = text/markdown
project_urls = 
    Source = https://github.com/bshall/Tacotron
    Samples = https://bshall.github.io/tacotron/
keywords = 
    Speech Synthesis
    Tacotron
    Text-to-Speech
    PyTorch
classifiers =
    Natural Language :: English
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = tacotron
include_package_data = True
python_requires = >=3.6
install_requires =
    librosa>=0.8.0
    numpy>=1.18.0
    tqdm>=4.41
    requests
    importlib-resources
    omegaconf>=2.0.3